# pi2

./: .gitignore  TODO.md  pkgbuild.toml
crates/libpm/: Cargo.toml
crates/libpm/src/: lib.rs
crates/libpm/src/enums/: architecture.rs  license.rs  mod.rs  source.rs
crates/libpm/src/structs/: dependency.rs  manifest.rs  mod.rs  operation.rs  package.rs  source.rs
crates/pi/: Cargo.toml
crates/pi/src/: config.rs  error.rs  lib.rs  main.rs  pkg.rs
crates/store/: Cargo.toml
crates/store/src/: envs.rs  generate.rs  main.rs
