[package]
name = "libpm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# data serialization
serde = { version="1.0.130", features=["derive"]}
serde_yaml = "0.8.21"
toml = "0.5.8"
# datetime
chrono = "0.4.19"