[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
thiserror = "1.0.30"
anyhow = "1.0.53"
subprocess = "0.2.8"